Fix bug with style footer on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,13 +25,16 @@ body {
   background-size: 250px;
   background-position: center;
   opacity: 0.95;
-  min-height: 100vh;
-  height: 10vh;
+  height: 100vh;
   width: 100%;
   overflow: hidden !important;
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
   position: relative;
+  padding-bottom: env(safe-area-inset-bottom);
+  margin: 0;
+  height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+  height: calc(var(--vh, 1vh) * 100);
 }
 
 body::after {
@@ -45,4 +48,10 @@ body::after {
   left: 0;
   bottom: 0;
   z-index: -100;
+}
+
+@media only screen and (max-width: 768px) {
+  body {
+    padding-bottom: calc(1.4rem + env(safe-area-inset-bottom));
+  }
 }
